<resources>
    <string name="app_name">Taller Android</string>

    <!--    Common-->
    <string name="common_accept_text">Aceptar</string>
    <string name="common_cancel_text">Cancelar</string>
    <string name="common_required_error_text">Requerido</string>

    <!--    Home fragment-->
    <string name="home_fragment_title_text">Taller Android 21/22</string>
    <string name="home_fragment_view_data_button_text">Ver datos</string>
    <string name="home_fragment_utilities_title_text">Utilidades</string>
    <string name="home_fragment_number_species_text">Número de especies</string>
    <string name="home_fragment_number_specimens_text">Número de especímenes</string>
    <string name="home_fragment_delete_database_button">Borrar datos</string>
    <string name="home_fragment_snackbar_new_animal_text">Se ha añadido un nuevo animal</string>
    <string name="home_fragment_snackbar_existing_animal_text">Se ha añadido un animal existente</string>
    <string name="home_fragment_snackbar_delete_database_text">Se han borrado todos los datos</string>

    <!--    View data fragment-->
    <string name="view_data_fragment_no_data_text">No hay datos</string>

    <!--    Family-->
    <string name="family_mammal_text">Mamífero</string>
    <string name="family_reptile_text">Reptil</string>
    <string name="family_fish_text">Pez</string>
    <string name="family_bird_text">Ave</string>

    <!--    Add dialog-->
    <string name="add_animal_dialog_title_text">Añadir animal</string>
    <string name="add_animal_dialog_species_text">Especie</string>
    <string name="add_animal_dialog_family_text">Familia</string>

</resources>