<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_m">

    <com.google.android.material.textview.MaterialTextView
        style="@style/SubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_animal_dialog_title_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/species_text_field_layout"
        style="@style/Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:hint="@string/add_animal_dialog_species_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/species_text_field"
            style="@style/Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/family_text_field_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:hint="@string/add_animal_dialog_family_text">

        <AutoCompleteTextView
            android:id="@+id/family_text_field"
            style="@style/Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>